# gemini-3-hackathon

./: .env.example  .gitignore  README.md  pyproject.toml
config/: settings.py
docs/: plan.md
frontend/: .env.local.example  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/ui/: button.tsx  card.tsx  checkbox.tsx  scroll-area.tsx  separator.tsx  textarea.tsx
frontend/src/lib/: api.ts  schemas.ts
scripts/: clean_global_life_os.ps1
src/: __init__.py  main.py
src/audit/: audit_log.py
src/connectors/: __init__.py  base.py  calendar.py  gmail.py  google_utils.py  notion.py  obsidian.py  registry.py  seed.py
src/diff/: __init__.py  generate_diffs.py
src/domain/: __init__.py  prd_models.py
src/lifegraph/: __init__.py  dedupe.py  graph.py  normalize.py  schema.py  storage.py
src/orchestration/: __init__.py  api.py  flows.py  mock_plans.py  run_life_request.py
src/orchestration/agents/: __init__.py  council.py  executor_agent.py  prompts.py
src/retrieval/: __init__.py  context_assembler.py  hybrid.py
